--- a/main.html
+++ b/main.html
@@ -10,6 +10,37 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+		 <header>
+			 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWXfvdaZo1Zy5GWYLz8wS-gYXAzh6YGnwIGQ0gAZTT&s" width
+    <h1>John Doe</h1>
+    <a href="https://www.linkedin.com/in/johndoe" target="_blank">LinkedIn</a>
+  </header>
+  
+  <main>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Web Development</li>
+        <li>JavaScript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Python</li>
+      </ul>
+    </section>
+    
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+    </section>
+  </main>
+  
+  <footer>
+    <p>&copy; 2023 John Doe</p>
+  </footer>
 
 </body>
 
