--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 		 <header>
-			 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWXfvdaZo1Zy5GWYLz8wS-gYXAzh6YGnwIGQ0gAZTT&s" width
-    <h1>John Doe</h1>
+			 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWXfvdaZo1Zy5GWYLz8wS-gYXAzh6YGnwIGQ0gAZTT&s" >
+		    <h1>John Doe</h1>
     <a href="https://www.linkedin.com/in/johndoe" target="_blank">LinkedIn</a>
   </header>
   
